mac jpackage打包热更新通过